--- a/Frontened Website/user templates/project.html
+++ b/Frontened Website/user templates/project.html
@@ -187,14 +187,14 @@
                 <h2>Tasks</h2>
                 <ol>
                     <li>A Portal Of a Company</li>
-                    <li>Resume Bulder</li>
+                    <li>Resume Builder</li>
                 </ol>
             </section>
             <section class="Overview">
                 <h2>Overview</h2>
                 <ol>
                     <li>A Portal Of a Company with the help of HTML,CSS,JS and BOOTSTRAP</li>
-                    <li>Resume Bulder with the help of Python with Django </li>
+                    <li>Resume Builder with the help of Python with Django </li>
                 </ol>
             </section>
 
